add new contain

--- a/about html 5/table.html
+++ b/about html 5/table.html
@@ -23,10 +23,10 @@ margin: 10px;}
 </head>
 <header>  
   <nav>
-    <a href="/from.html">Home</a>
-    <a href="/non-cimantick.html">contct Us</a>
-    <a href="/about-adio-video.html">More</a>
-    <a href="">Viste Google</a>
+    <a href="/about html 5/from.html" target="_blank">Home</a>
+    <a href="/about html 5/non-cimantick.html" target="_blank">contct Us</a>
+    <a href="/about html 5/about-adio-video.html" target="_blank" >More</a>
+    <a href="https://www.google.com/webhp?hl=en&sa=X&ved=0ahUKEwiW15u837L8AhW_7jgGHZkPAt0QPAgI" target="_blank">Viste Google</a>
  </nav>
 </header>
 <body>
