--- a/about html 5/from.html
+++ b/about html 5/from.html
@@ -32,10 +32,15 @@
       <lable for="samsung"> 
         <input type="radio" id="samsung" name="phone">samsung
       </lable>
-      <lable for="one plus"> 
-        <input type="radio" id="one plus" name="Phone">one plus
+      <lable for="oppo"> 
+        <input type="radio" id="oppo" name="Phone">oppo
       </lable>
-      <input type="submit" placeholder="submit">
+      <input type="submit" placeholder="submit"> 
+      <p>Gender</p>
+      <input type="radio" name="gender" value="Male">Male
+      <input type="radio" name="gender" value="Female">Female
+      <input type="radio" name="phone" value="one plus">one plus
+
 
     </fieldset>
     
