--- a/about html 5/non-cimantick.html
+++ b/about html 5/non-cimantick.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>i frame</title>
 </head>
+
 <body>
-  <iframe width="250" height="250" src="https://www.youtube.com/embed/UrYOpc3gM-I" title="New Bangla Natok 2023 | Shami Vokto Bou | স্বামী ভক্ত বউ | Niloy Alamgir , Heme | Global TV Online" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <iframe width="250" height="250" src="https://www.youtube.com/embed/UrYOpc3gM-I"
+    title="New Bangla Natok 2023 | Shami Vokto Bou | স্বামী ভক্ত বউ | Niloy Alamgir , Heme | Global TV Online"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen></iframe>
 </body>
+
 </html>
