--- a/about html 5/table.html
+++ b/about html 5/table.html
@@ -22,11 +22,12 @@ margin: 10px;}
   </style>
 </head>
 <header>  
-  <nav>
-    <a href="/about html 5/from.html" target="_blank">Home</a>
-    <a href="/about html 5/non-cimantick.html" target="_blank">contct Us</a>
-    <a href="/about html 5/about-adio-video.html" target="_blank" >More</a>
-    <a href="https://www.google.com/webhp?hl=en&sa=X&ved=0ahUKEwiW15u837L8AhW_7jgGHZkPAt0QPAgI" target="_blank">Viste Google</a>
+  <nav> 
+    <li><a href="/about html 5/from.html" target="_blank">Home</a></li>
+    
+   <li><a href="/about html 5/non-cimantick.html" target="_blank">contct Us</a></li>
+    <li><a href="/about html 5/about-adio-video.html" target="_blank" >More</a></li>
+    <li> <a href="https://www.google.com/webhp?hl=en&sa=X&ved=0ahUKEwiW15u837L8AhW_7jgGHZkPAt0QPAgI" target="_blank">Viste Google</a></li>
  </nav>
 </header>
 <body>
